Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.6.11, 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
Description
It's a regression in latest version 10.6.11, I did not try with other branches. But it used to work before this release.
How to repeat:
MariaDB [INFORMATION_SCHEMA]> CREATE TABLE test.test_getcolpriv(col1 INT, col2 INT);
|
Query OK, 0 rows affected (0.041 sec) |
MariaDB [INFORMATION_SCHEMA]> GRANT SELECT (col1,col2) ON test.test_getcolpriv TO 'root'; |
Query OK, 0 rows affected (0.025 sec) |
MariaDB [INFORMATION_SCHEMA]> GRANT INSERT (col1) ON test.test_getcolpriv TO 'root'; |
Query OK, 0 rows affected (0.025 sec) |
|
|
MariaDB [INFORMATION_SCHEMA]> REVOKE SELECT (col1,col2) ON test.test_getcolpriv FROM 'root'; |
Query OK, 0 rows affected (0.025 sec) |
MariaDB [INFORMATION_SCHEMA]> REVOKE INSERT (col1) ON test.test_getcolpriv FROM 'root'; |
ERROR 1147 (42000): There is no such grant defined for user 'root' on host '%' on table 'test_getcolpriv' |
FLUSH PRIVILEGES in between fixes the thing. Also, any one GRANT/REVOKE from these two do not result in the error
Attachments
Issue Links
- is caused by
-
MDEV-29465 Inherited columns privs for roles wrongly set mysql.tables_priv column
-
- Closed
-